--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "build": "cross-env NODE_ENV=production node build/build.js",
     "build:test": "cross-env NODE_ENV=test node build/build.js"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["react-apps"],
+  "author": "_jun",
   "license": "ISC"
 }
