feat:新增创建项目脚本

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "webpack-merge": "^5.8.0"
   },
   "scripts": {
+    "create": "cross-env NODE_ENV=development node build/create.config.js",
     "dev": "cross-env NODE_ENV=development webpack-dev-server --progress --config build/webpack.dev.config.js",
     "build": "cross-env NODE_ENV=production node build/build.js",
     "build:test": "cross-env NODE_ENV=test node build/build.js"
