--- a/package.json
+++ b/package.json
@@ -41,11 +41,15 @@
     "html-webpack-plugin": "^4.5.2",
     "less": "^4.1.3",
     "less-loader": "^6.2.0",
+    "lib-flexible": "^0.3.2",
     "mini-css-extract-plugin": "^0.9.0",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "ora": "^4.0.2",
     "postcss": "^8.4.14",
     "postcss-loader": "^3.0.0",
+    "postcss-px2rem": "^0.3.0",
+    "postcss-px2rem-exclude": "0.0.6",
+    "postcss-pxtorem": "^5.1.1",
     "prettier": "^2.7.1",
     "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
