--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
   },
   "scripts": {
     "create": "cross-env NODE_ENV=development node build/create.config.js",
-    "start": "cross-env NODE_ENV=development webpack-dev-server --progress --config build/webpack.dev.config.js",
+    "start": "cross-env NODE_ENV=development webpack-dev-server --config build/webpack.dev.config.js",
     "build": "cross-env NODE_ENV=production node build/build.js",
     "build:test": "cross-env NODE_ENV=test node build/build.js"
   },
