--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-apps",
+  "name": "react-apps",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -18,6 +18,7 @@
     "@babel/preset-react": "^7.0.0",
     "@babel/runtime": "^7.5.5",
     "@babel/runtime-corejs2": "^7.5.5",
+    "antd-mobile": "^5.22.0",
     "autoprefixer": "^9.6.1",
     "babel-loader": "^8.2.5",
     "babel-plugin-import": "^1.13.5",
@@ -43,6 +44,7 @@
     "less-loader": "^6.2.0",
     "lib-flexible": "^0.3.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "ora": "^4.0.2",
     "postcss": "^8.4.14",
