--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react": "^7.31.4",
     "eslint-webpack-plugin": "^3.2.0",
     "file-loader": "^6.2.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-externals-plugin": "^3.8.0",
     "html-webpack-plugin": "^4.5.2",
     "less": "^4.1.3",
@@ -59,6 +60,7 @@
     "webpack": "^4.46.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.10.0",
+    "webpack-dev-middleware": "^5.3.3",
     "webpack-dev-server": "^4.9.2",
     "webpack-merge": "^5.8.0"
   },
